--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://admin:<password>@webfluxcluster.cq5hw40.mongodb.net/webflux-course?retryWrites=true&w=majority
+      uri: mongodb+srv://${DB_USER:admin}:${DB_PASSWORD}@webfluxcluster.cq5hw40.mongodb.net/${DB_NAME:webflux-course}?retryWrites=true&w=majority
