--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,4 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://${DB_USER:admin}:${DB_PASSWORD}@webfluxcluster.cq5hw40.mongodb.net/${DB_NAME:webflux-course}?retryWrites=true&w=majority
+      auto-index-creation: true
